--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,15 +47,42 @@ h2 {
     text-decoration: none;
     color: inherit;
 }
-#menu a:hover{
+
+#menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
+
 .active {
-border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 }
+
 /* hero image */
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center;
+    background: url(../image/hero-image.webp) no-repeat center center;
+
+    /* animation zoom effect on loading page  */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+
+
+/* creates level of zoom for hero image */
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
 }
