--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 #menu {
@@ -93,7 +94,7 @@ h2 {
     }
 }
 
-#cover-text{
+#cover-text {
     font-size: 130%;
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
@@ -106,11 +107,35 @@ h2 {
     padding-top: 40px;
     padding-left: 10px;
 
-    background-color: rgb(241,109,107,.7);
+    background-color: rgb(241, 109, 107, .7);
 
     bottom: 30px;
-    right:150px;
-    
+    right: 150px;
+
 
     position: absolute;
+}
+/* Club Ethos */
+
+#club-ethos{
+    height: 600px;
+}
+
+#left-about{
+    padding-top: 30px;
+
+    width: 33%;
+    float: left;
+}
+
+#right-about{
+    padding-top: 30px;
+
+    width: 33%;
+    float: right;
+}
+
+#center-about{
+    width: 33%;
+    margin: 0 auto;
 }
