--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,26 +115,27 @@ h2 {
 
     position: absolute;
 }
+
 /* Club Ethos */
 
-#club-ethos{
+#club-ethos {
     height: 600px;
 }
 
-#left-about{
+#left-about {
     padding-top: 30px;
     width: 33%;
     float: left;
-    
+
 }
 
-#right-about{
+#right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
 }
 
-#center-about{
+#center-about {
     width: 33%;
     margin: 0 auto;
 
@@ -146,28 +147,51 @@ hr {
     margin: 5px 0;
 }
 
-.left-about-heading{
+.left-about-heading {
     width: 60%;
     float: right;
-    line-height:20px;
+    line-height: 20px;
     clear: both;
     margin-bottom: 50px;
 
 }
-.right-about-heading{
+
+.right-about-heading {
     width: 60%;
     float: left;
-    line-height:20px;
+    line-height: 20px;
     clear: both;
     margin-bottom: 50px;
 
 }
 
-.right-about-heading h2{
+.right-about-heading h2 {
     text-align: right;
 }
 
-.right-about-heading p{
+.right-about-heading p {
     text-align: right;
 }
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg{
+    background-image: url(../image/ethos-center-image.jpg);
+    height: 100%;
+    border-radius: 50%;
 }
