--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,14 +235,26 @@ footer {
     text-align: center;
 }
 
-.social-networks > li {
+.social-networks>li {
     display: inline;
 }
 
 .social-networks i {
     font-size: 160%;
     margin: 1px;
-    padding:5% ;
-    color:#3a3a3a
-    ;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+/* gallery  */
+
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+
+}
+#photos > img{
+    width: 100%;
 }
