--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,12 +280,25 @@ footer {
         float: left;
         padding: 0;
     }
-    #center-about{
+
+    #center-about {
         clear: both;
         width: 100%;
         float: left;
         padding: 0;
     }
-    hr{
+
+    hr {
         display: none;
+    }
+
+    /* for l medium screem size from 950px wide and down */
+    @media screen and (max-width:950px) {
+        #menu{
+            clear: left;
+            float: left;
+            margin-left: 30px;
+            margin-bottom: 20px;
+            line-height: 25px;
+        }
     }
